# agents

./: .env.example  .gitignore  .gitmodules  MAINTENANCE.md  Makefile  NOTICE  README.md  bundle_framework.py  generate_aliases.py  how-to-make-lib.MD  pyproject.toml
.devcontainer/: devcontainer.json
11labs-sdk/: agent_websockets.md  demo.py
livekit-agents/livekit/agents/voice/: generation.py
livekit-plugins/livekit-plugins-elevenlabs/livekit/plugins/elevenlabs/realtime/: realtime_model.py
overlay/: README.md
overlay/agents/voice/: agent_activity.py
overlay/plugins/elevenlabs/realtime/: __init__.py  realtime_model.py
vyvoj25_framework/livekit/plugins/elevenlabs/: __init__.py
